# battery-pack

./: release-plz.toml
.github/workflows/: build-binaries.yml  mdbook.yml
md/: creating.md  using.md
md/spec/: cli.md  manifest.md
src/battery-pack/: CHANGELOG.md  Cargo.toml
src/battery-pack/bphelper-build/: CHANGELOG.md  Cargo.toml
src/battery-pack/bphelper-cli/: CHANGELOG.md  Cargo.toml
src/battery-pack/bphelper-cli/src/: lib.rs
src/battery-pack/bphelper-cli/src/commands/: mod.rs  tests.rs
src/battery-pack/bphelper-cli/src/manifest/: mod.rs  tests.rs
src/battery-pack/bphelper-cli/src/template_engine/: tests.rs
src/battery-pack/bphelper-cli/tests/: group1_tags.rs
src/battery-pack/bphelper-manifest/: CHANGELOG.md  Cargo.toml
src/battery-pack/templates/default/: Cargo.toml.liquid
src/battery-pack/templates/default/hooks/: pre-script.rhai
src/battery-pack/tests/: new_suffix.rs
src/error-battery-pack/: CHANGELOG.md  Cargo.toml
