[package]
name = "battery-pack"
version = "0.4.3"
edition = "2024"
description = "Curated crate bundles with docs, templates, and agentic skills"
license = "MIT OR Apache-2.0"
repository = "https://github.com/battery-pack-rs/battery-pack"
keywords = ["battery-pack", "curation", "templates", "cargo"]
readme = "README.md"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/cargo-bp-{ target }-v{ version }{ archive-suffix }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.battery]
schema_version = 1

[package.metadata.battery.templates]
default = { path = "templates/default", description = "Starter template for authoring a battery pack" }

[[bin]]
name = "cargo-bp"
path = "src/main.rs"

[dependencies]
bphelper-build = { path = "bphelper-build", version = "0.4.1" }
bphelper-cli = { path = "bphelper-cli", version = "0.4.1" }
bphelper-manifest = { path = "bphelper-manifest", version = "0.5.0" }
anyhow.workspace = true

[dev-dependencies]
expect-test.workspace = true
