[package]
name = "error-battery-pack"
version = "0.5.0"
edition = "2024"
description = "Error handling done well — anyhow for apps, thiserror for libraries"
license = "MIT OR Apache-2.0"
repository = "https://github.com/battery-pack-rs/battery-pack"
readme = "README.md"
keywords = ["battery-pack", "error-handling", "anyhow", "thiserror"]

[dependencies]
anyhow = { version = "1", optional = true }
thiserror = { version = "2", optional = true }

[build-dependencies]
battery-pack.workspace = true

[features]
default = ["anyhow", "thiserror"]
