[package]
name = "bphelper-cli"
version = "0.4.1"
edition = "2024"
description = "CLI for creating and managing battery packs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/battery-pack-rs/battery-pack"
keywords = ["battery-pack", "cli", "cargo"]

[dependencies]
bphelper-manifest = { path = "../bphelper-manifest", version = "0.5.0" }
clap.workspace = true
cargo-generate.workspace = true
cargo_metadata.workspace = true
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
toml.workspace = true
flate2 = "1"
tar = "0.4"
tempfile = "3"
console = "0.15"
urlencoding = "2"
ratatui = "0.29"
crossterm = "0.28"
open = "5"
dialoguer = "0.11"
syn = { version = "2", features = ["full"] }
toml_edit = "0.22"
semver = "1"

[dev-dependencies]
expect-test.workspace = true
tempfile = "3"
